Fix for alert message on mobile - Updated payment view

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -24,6 +24,10 @@
             overflow-x: hidden !important;
 
     }
+    .alert-success{
+        width: 200px;
+        margin-left: 57px;
+    }
     }
 
 
